traces/bug_592.txt
src/fflib/lgmesh.cpp:863: error: DEAD_STORE
  The value written to &ch2 (type double) is never used.
Showing all 1 steps of the trace


src/fflib/lgmesh.cpp:863:5: Write of unused value
861.       
862.     Metric Mhmax(hmax);
863.       double  ch2=2/(hmax*hmax);
           ^
864.       double  cH2=2/(hmin*hmin);
865.       
